# data-tools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  case_library.json  pyproject.toml  requirements-dev.txt
data_tools/: __init__.py  main.py
data_tools/compose/: test_redis.py
data_tools/input/: README.md  __init__.py  csv_input.py  csv_reader.py
scripts/: README.md  README_DRIVER.md  __init__.py  check_merge_field_spark.py  check_mstr_price.gs  check_online_in_conf.py  compare_seq_order_data.py  compare_tasks.py  download_dinov2.py  embedding.py  estimate_ocr_storage.py  example_script.py  extract_dict_key.py  fusion_extract.py  hdfs_backup_check.sh  hdfs_check_merge_field.sh  hdfs_compare.py  hdfs_copy_non_gz.sh  image_case_classifier.py  image_cluster.py  multiget.sh  no_commission_card_parse.py  ocr.py  ollama_client.py  parse_ocr_time.py  process_csv.py  process_driver_csv.py  process_seq_order.py  reorder_saas_to_cas.py  run_multiget_batch.sh  sample_saas_csv.py  test_image.py  test_qwen.py  txt_to_csv.py  video.py  xlsx_to_csv.py
scripts/data/: driver_new.csv  driver_new_processed_20251226_114207.xlsx  driver_new_processed_20251226_114345.xlsx  driver_new_processed_20251229_104601.xlsx  driver_new_processed_20251230_102558.xlsx  no_commission_card_params.csv  saas.cas  saas.csv  saas_sample_50_20260126_142939.csv  saas_sample_50_石家庄市_20260126_150637.csv  saas_sample_50_石家庄市_20260126_200528.csv  saas_sample_50_石家庄市_20260126_202145.csv  saas_test.csv  saas_test2.csv
scripts/data1/: 1.txt  2.txt  Untitled-25.txt  dict_key_list.csv  dict_key_list.csv.bak  冒泡.csv  (+5 more)
tests/: test_input.py  test_main.py
(+3 files in other folders)
